styled footer and fixed projects on mobile

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -1,5 +1,5 @@
 .site-footer {
-  background-color: lightgray;
+  background-color: #f2f2f2;
   color: white;
   text-align: center;
   width: 100%;
